fix gap between teeth

--- a/.tmp/styles/style.css
+++ b/.tmp/styles/style.css
@@ -411,7 +411,7 @@ a {
   .button:hover, .button:active {
     background: #FF8300;
     color: white; }
-  .button--cheked {
+  .button--selected {
     -webkit-border-radius: 5px;
             border-radius: 5px;
     background-color: #1D24AB;
@@ -585,7 +585,10 @@ a {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    margin: 0 50px; }
+    -webkit-box-flex: 1;
+    -webkit-flex-grow: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1; }
   .header__nav-link {
     list-style-type: none;
     height: 24px;
@@ -654,10 +657,9 @@ a {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around;
     -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
             flex-wrap: wrap; }
