--- a/src/styles/elements/button.scss
+++ b/src/styles/elements/button.scss
@@ -19,7 +19,7 @@
     color: white;
   }
   
-  &--cheked {
+  &--selected {
     border-radius: 5px;
     background-color: #1D24AB;
     color: #FFFFFF;
