--- a/src/styles/sections/menu.scss
+++ b/src/styles/sections/menu.scss
@@ -3,7 +3,7 @@
 
   &__wrap {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
   }
 
